fix(window): window actions are not properly aligned in IE

--- a/packages/bootstrap/scss/window/_theme.scss
+++ b/packages/bootstrap/scss/window/_theme.scss
@@ -14,6 +14,11 @@
         height: 1em;
         border-width: 0;
         opacity: .5;
+
+        // fix: IE 11 tends to displace the buttons, so we remove the padding
+        .k-ie & {
+            padding: 0;
+        }
     }
     .k-window-action:hover {
         opacity: .75;
